--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -12,6 +12,10 @@
 
         img {
             max-height: 5rem;
+
+            @media screen and (max-width: $break-md) {
+                max-height: 4rem;
+            }
         }
     }
 
@@ -20,6 +24,10 @@
         margin: 0;
         list-style-type: none;
         padding: 0;
+
+        @media screen and (max-width: $break-md) {
+            display: none;
+        }
     }
 
     &__item {
