--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,6 @@
 @import 'colors';
-@import 'navbar';
 @import 'core';
+@import 'navbar';
 
 .intro {
     display: flex;
@@ -26,11 +26,17 @@
         font-size: 4rem;
         color: $white-color;
         margin: 0.5rem;
+        text-align: center;
+
+        @media screen and (max-width: $break-md) {
+          font-size: 2.5rem;
+        }
       }
 
       p {
         font-size: 1.2rem;
         color: $white-color;
+        text-align: center;
       }
     }
 }
