--- a/src/scss/_core.scss
+++ b/src/scss/_core.scss
@@ -5,7 +5,6 @@ $break-sm: 800px;
 $break-md: 1000px;
 
 html {
-    line-height: 1.15;
     -webkit-text-size-adjust: 100%;
 }
 
@@ -79,4 +78,16 @@ body {
             margin-bottom: 20px;
         }
     }
+}
+
+.shadow-sm {
+    box-shadow: 0 .125rem .25rem rgba(0,0,0,.075) !important;
+}
+
+.shadow-md {
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+}
+
+.shadow-lg {
+    box-shadow: 0 1rem 3rem rgba(0,0,0,.175)!important;
 }
