--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -116,10 +116,12 @@
     max-width: 450px;
     max-height: 500px;
     margin-left: 6rem;
+    padding: 2rem;
 
     @media screen and (max-width: $break-md) {
+      width: 100%;
       margin-top: 3rem;
-      margin-left: 0;
+      margin-left: 0; 
     }
   }
 }
