--- a/src/scss/_core.scss
+++ b/src/scss/_core.scss
@@ -29,12 +29,8 @@ body {
 }
 
 .container {
-    width: 80vw;
+    max-width: 1500px;
     margin: auto;
-
-    @media screen and (max-width: $break-md) {
-        width: 90vw
-    }
 }
 
 .section {
@@ -57,14 +53,14 @@ body {
             text-align: center;
             text-transform: uppercase;
             font-weight: 700;
-            font-size: 38px;
+            font-size: 2.5rem;
             margin-bottom: 20px;
             margin-top: 0px;
         }
 
         p {
             text-align: center;
-            font-size: 0.9rem;
+            font-size: 1rem;
             margin-bottom: 2rem;
         }
 
@@ -81,13 +77,13 @@ body {
 }
 
 .shadow-sm {
-    box-shadow: 0 .125rem .25rem rgba(0,0,0,.075) !important;
+    box-shadow: 0 .125rem .25rem rgba(0,0,0,.04) !important;
 }
 
 .shadow-md {
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.04)!important;
 }
 
 .shadow-lg {
-    box-shadow: 0 1rem 3rem rgba(0,0,0,.175)!important;
+    box-shadow: 0 1rem 3rem rgba(0,0,0,.04)!important;
 }
