--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,7 @@
       align-items: center;
       flex-direction: column;
       padding: 1rem;
+      animation-delay: 0.2s;
 
       img {
         max-height: 10rem;
@@ -43,85 +44,116 @@
 
 .services {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   flex-wrap: wrap;
 
-  .service-item {
-    padding: 1rem;
+  @media screen and (max-width: $break-md) {
+    justify-content: center;
+  }
+
+  &__item {
     max-width: 400px;
+    padding: 2rem;
+    background-color: $white-color;
+    margin: 1rem;
+  }
+
+  &__icon {
+    display: flex;
+    justify-content: center;
+    font-size: 4rem;
+    padding: 2rem;
+    color: $primary-color;
+  }
+
+  &__title {
+    font-size: 1.5rem;
+    font-weight: 700;
+    text-align: center;
     margin-bottom: 1rem;
-    
-    &__icon {
-      float: left;
-      background: $primary-color;
-      padding: 16px;
-      border-radius: 50%;
-      transition: 0.5s;
+  }
 
-      width: 32px;
-      height: 32px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
-      i {
-        font-size: 1.5rem;
-        color: $white-color;
-      }
-    }
-
-    &__title {
-      margin-left: 80px;
-      font-weight: 700;
-      margin-bottom: 0.5rem;
-      font-size: 1.2rem;
-    }
-
-    &__description {
-      margin-left: 80px;
-      line-height: 1.5;
-    }
+  &__content {
+    text-align: center;
+    margin-bottom: 1rem;
   }
 }
 
 .about {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+  width: 100%;
   flex-wrap: wrap;
 
-  .content {
-    max-width: 500px;
-    text-align: left;
+  &__content {
+    display: block;
+    width: 50%;
+    padding: 1rem;
 
     @media screen and (max-width: $break-md) {
-      text-align: center;
+      width: 100%;
     }
 
     h3 {
       font-family: 'Montserrat';
+      font-size: 2.5rem;
       margin-top: 0;
-      margin-bottom: 1rem;
-      font-size: 2rem;
+      margin-bottom: 1rem;   
     }
 
     p {
-      line-height: 1.5rem;
-      margin-bottom: 0;
+      font-size: 1.1rem;
+      line-height: 2rem;
+      margin-bottom: 0;  
     }
   }
 
   &__art {
-    object-fit: cover;
-    max-width: 450px;
-    max-height: 500px;
-    margin-left: 6rem;
-    padding: 2rem;
+    display: flex;
+    justify-content: center;
+    padding: 1rem;
+    object-fit: contain;
 
-    @media screen and (max-width: $break-md) {
-      width: 100%;
-      margin-top: 3rem;
-      margin-left: 0; 
+    img {
+      max-width: 500px;
+
+      @media screen and (max-width: $break-md) {
+        width: 100%;
+      }
+    }
+  }
+}
+
+.mail-button {
+  display: flex;
+  justify-content: center;
+  font-size: 4rem;
+  color: $primary-color;
+
+  a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    padding: 2rem;
+    border-radius: 9999px;
+    transition: 0.3s ease-in-out;
+
+    &:hover {
+      transform: scale(1.16);
+      background: $primary-color;
+
+      i {
+        color: $white-color;
+      }
+    }
+
+    i {
+      display: inline-block;
+      font-size: 4rem;
+      color: $primary-color;
+      transition: 0.3s ease-in-out;
     }
   }
 }
