--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,43 +3,77 @@
 @import 'navbar';
 
 .intro {
+  display: flex;
+  height: 700px;
+  background: linear-gradient(180deg,rgba(0,0,0,.3),rgba(0,0,0,0.8)), url('../assets/img/bc_hand.png') no-repeat 100% center;
+  background-size: cover;
+  align-items: center;
+  justify-content: center;
+
+  &__container {
     display: flex;
-    height: 700px;
-    background: linear-gradient(180deg,rgba(0,0,0,.3),rgba(0,0,0,0.8)), url('../assets/img/bg.jpg') no-repeat 100% fixed;
-    background-size: cover;
     align-items: center;
-    justify-content: center;
+    flex-direction: column;
+    padding: 1rem;
+    animation-delay: 0.2s;
 
-    &__container {
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      padding: 1rem;
-      animation-delay: 0.2s;
+    img {
+      max-height: 10rem;
+      margin-bottom: 1rem;
+    }
 
-      img {
-        max-height: 10rem;
-        margin-bottom: 1rem;
-      }
+    h1 {
+      font-weight: 700;
+      font-size: 4rem;
+      color: $white-color;
+      margin: 0.5rem;
+      text-align: center;
 
-      h1 {
-        font-weight: 700;
-        font-size: 4rem;
-        color: $white-color;
-        margin: 0.5rem;
-        text-align: center;
-
-        @media screen and (max-width: $break-md) {
-          font-size: 2.5rem;
-        }
-      }
-
-      p {
-        font-size: 1.2rem;
-        color: $white-color;
-        text-align: center;
+      @media screen and (max-width: $break-md) {
+        font-size: 2.5rem;
       }
     }
+
+    p {
+      font-size: 1.2rem;
+      color: $white-color;
+      text-align: center;
+    }
+  }
+}
+
+.careers {
+  display: flex;
+  height: 700px;
+  background: url('../assets/img/join_us.jpg') no-repeat 100% center;
+  background-size: contain;
+  align-items: center;
+  justify-content: center;
+
+  &__content {
+    display: block;
+    width: 50%;
+    padding: 1rem;
+
+    @media screen and (max-width: $break-md) {
+      width: 100%;
+    }
+
+    h3 {
+      font-family: 'Montserrat';
+      font-size: 2.5rem;
+      margin-top: 0;
+      margin-bottom: 1rem;
+      color: #ffffff;
+    }
+
+    p {
+      font-size: 1.1rem;
+      line-height: 2rem;
+      margin-bottom: 0;
+      color: #ffffff;
+    }
+  }
 }
 
 .services {
@@ -99,13 +133,13 @@
       font-family: 'Montserrat';
       font-size: 2.5rem;
       margin-top: 0;
-      margin-bottom: 1rem;   
+      margin-bottom: 1rem;
     }
 
     p {
       font-size: 1.1rem;
       line-height: 2rem;
-      margin-bottom: 0;  
+      margin-bottom: 0;
     }
   }
 
@@ -156,4 +190,83 @@
       transition: 0.3s ease-in-out;
     }
   }
+}
+
+/* Footer */
+
+#footer {
+  padding: 6em 0 4em 0 ;
+  background-color: #1d242a;
+  text-align: center;
+}
+
+#footer .icons {
+  font-size: 1.25em;
+}
+
+#footer .icons a {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+#footer .icons a:hover {
+  color: #fff;
+}
+
+#footer .copyright {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 0.8em;
+  letter-spacing: 0.225em;
+  list-style: none;
+  padding: 0;
+  text-transform: uppercase;
+}
+
+#footer .copyright li {
+  border-left: solid 1px rgba(255, 255, 255, 0.5);
+  display: inline-block;
+  line-height: 1em;
+  margin-left: 1em;
+  padding-left: 1em;
+}
+
+#footer .copyright li:first-child {
+  border-left: 0;
+  margin-left: 0;
+  padding-left: 0;
+}
+
+#footer .copyright li a {
+  color: inherit;
+}
+
+#footer .copyright li a:hover {
+  color: #fff;
+}
+
+@media screen and (max-width: 480px) {
+
+  #footer .copyright li {
+    border: 0;
+    display: block;
+    line-height: 1.65em;
+    margin: 0;
+    padding: 0.5em 0;
+  }
+
+}
+
+@media screen and (max-width: 980px) {
+
+  #footer {
+    padding: 4em 3em 2em 3em ;
+  }
+
+}
+
+@media screen and (max-width: 736px) {
+
+  #footer {
+    padding: 3em 2em 1em 2em ;
+  }
+
 }
