--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,4 +1,4 @@
 $black-color: #000;
 $white-color: #fff;
-$gray-color: #f8f8f8;
-$primary-color: #24689a;
+$gray-color: #f5f7fc;
+$primary-color: #2a3855;
