--- a/src/scss/_core.scss
+++ b/src/scss/_core.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700,900|Open+Sans:400,700&display=swap');
 
-$global-font-family: 'Open Sans', sans-serif;
+$primary-font: 'Montserrat', sans-serif;
+$secondary-font: 'Open Sans', sans-serif;
+
 $break-sm: 800px;
 $break-md: 1000px;
 
@@ -10,9 +12,10 @@ html {
 
 body {
     margin: 0;
-    font-family: $global-font-family;
-    color: #3a3a3a;
+    font-family: $primary-font;
+    color: $primary-color;
     transition: all 0.2s ease-in-out;
+    line-height: 1.45;
 }
 
 .header {
@@ -45,45 +48,45 @@ body {
         padding: 4rem 2rem;
     }
 
-    .section-heading {
-        margin-bottom: 3rem;
+    &__heading {
+        text-align: center;
+        margin-bottom: 4rem;
 
         h2 {
-            font-family: 'Montserrat';
-            text-align: center;
-            text-transform: uppercase;
-            font-weight: 700;
+            font-family: $primary-font;
             font-size: 2.5rem;
-            margin-bottom: 20px;
-            margin-top: 0px;
+            margin: 0.5rem 0;
+            text-transform: uppercase;
+            color: $primary-color;
+
+            &:after {
+                content: '';
+                display: block;
+                height: 3px;
+                background: $primary-color;
+                width: 70px;
+                margin: 1.4rem auto;
+            }
         }
 
         p {
-            text-align: center;
-            font-size: 1rem;
-            margin-bottom: 2rem;
-        }
-
-        .heading-line {
-            display: block;
-            margin: 0 auto; 
-            height: 1px;
-            width: 80px;
-            background: #333;
-            margin-top: 10px;
-            margin-bottom: 20px;
+            margin-top: 1.7rem;
+            font-family: $secondary-font;
         }
     }
 }
 
-.shadow-sm {
-    box-shadow: 0 .125rem .25rem rgba(0,0,0,.04) !important;
-}
+.btn {
+    padding: .8rem 2.5rem;
+    font-weight: 600;
+    font-size: 1rem;
+    letter-spacing: .01em;
+    border-radius: 3px;
+    line-height: 1.5;
 
-.shadow-md {
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.04)!important;
-}
-
-.shadow-lg {
-    box-shadow: 0 1rem 3rem rgba(0,0,0,.04)!important;
+    &--primary {
+        color: $white-color;
+        background-color: $primary-color;
+        border-color: $primary-color;
+    }
 }
